--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-
-###> symfony/framework-bundle ###
+# file: ~/.gitignore_global
+.DS_Store
+.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+
+###> symfony/framework-bundle ###
 .env
 /public/bundles/
 /var/
